fix(ui): Bug fixes 13 Nov 2024 (#829)
* fix(ui): fix error when loading app

* feat(ui): fix background blur

* feat(ui): throw error when scan failed

* fix(ui): fix full page scanner error

* fix(ui): fix swap icon too big

* fix(ui): Fix animation jump on ios

* fix(ui): Fix cred accept animation

* fix(ui): fix UT

* fix(ui): fix UT

* feat(ui): fix animation for accept cred

* fix(ui): Fix review comment

---------

--- a/src/ui/pages/NotificationDetails/components/ReceiveCredential/ReceiveCredential.scss
+++ b/src/ui/pages/NotificationDetails/components/ReceiveCredential/ReceiveCredential.scss
@@ -67,13 +67,13 @@
     }
 
     .request-swap-logo span {
-      width: 2.75rem;
-      height: 2.75rem;
+      width: 2.5rem;
+      height: 2.5rem;
       border-radius: 2.75rem;
 
       ion-icon {
-        width: 1.875rem;
-        height: 1.875rem;
+        width: 1.25rem;
+        height: 1.25rem;
         margin: 0 auto;
       }
     }
@@ -156,6 +156,18 @@
         margin: 0 auto;
       }
     }
+
+    .request-swap-logo span {
+      width: 2rem;
+      height: 2rem;
+      border-radius: 2rem;
+
+      ion-icon {
+        width: 1rem;
+        height: 1rem;
+      }
+    }
+
 
     .request-provider-logo img {
       border-radius: 5rem;
@@ -322,47 +334,46 @@
 
   @keyframes checkMarkAnimation {
     0% {
-      transform: scale(0);
       opacity: 0;
     }
-    70% {
-      transform: scale(0) rotate(360deg);
+    51% {
+      opacity: 0;
+    }
+    52% {
       opacity: 1;
     }
-    95% {
-      transform: scale(1) rotate(0);
-      opacity: 1;
+    75% {
+      transform: translateY(0);
     }
     100% {
-      transform: translateY(-10%);
+      transform: translateY(-20%);
+    }
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(180deg);
+    }
+    100% {
+      transform: rotate(0);
     }
   }
 
   @keyframes statusResizeAnimation {
     0% {
       opacity: 0;
-      transform: translateY(-200%);
+      transform: translateY(-300%);
+    }
+    75% {
+      transform: translateY(-100%);
+      opacity: 0;
     }
     90% {
-      opacity: 0;
-      transform: translateY(-200%);
-    }
-    95% {
-      opacity: 1;
-      transform: translateY(-90%);
+      opacity: 0.1;
     }
     100% {
       opacity: 1;
-      transform: translateY(-15%);
-    }
-  }
-
-  @keyframes moveToCenter {
-    0% {
-      justify-content: space-between;
-    }
-    100% {
-      justify-content: center;
+      transform: translateY(0);
     }
   }
 
@@ -475,6 +486,15 @@
       animation: translateTitleUpAnimation 1s forwards;
     }
 
+    .request-icons-row {
+      margin: 0;
+    }
+
+    .request-animation-center {
+      transform: translateY(15%);
+      transition: transform 0.5s;
+    }
+
     .request-user-logo {
       animation-delay: 0.5s !important;
       animation: translateRightAnimation 0.75s forwards;
@@ -491,7 +511,12 @@
     }
 
     .request-checkmark-logo {
-      animation: checkMarkAnimation 1.5s forwards;
+      animation: checkMarkAnimation 2.5s forwards;
+
+      span {
+        animation: spin 0.625s forwards;
+        animation-delay: 1.25s;
+      }
     }
 
     .request-info-row {
@@ -500,7 +525,8 @@
     }
 
     .request-status {
-      animation: statusResizeAnimation 1.5s forwards;
+      z-index: -1;
+      animation: statusResizeAnimation 2.5s forwards;
     }
 
     .credential-detail {
